@startuml

title __TOOLS's Class Diagram__\n

  namespace com.fahadali.intranet {
    namespace fragments.ui.tools {
      class com.fahadali.intranet.fragments.ui.tools.ToolsFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.fahadali.intranet {
    namespace fragments.ui.tools {
      class com.fahadali.intranet.fragments.ui.tools.ToolsViewModel {
          - mText : MutableLiveData<String>
          + ToolsViewModel()
          + getText()
      }
    }
  }
  

  com.fahadali.intranet.fragments.ui.tools.ToolsFragment -up-|> androidx.fragment.app.Fragment
  com.fahadali.intranet.fragments.ui.tools.ToolsFragment o-- com.fahadali.intranet.fragments.ui.tools.ToolsViewModel : toolsViewModel
  com.fahadali.intranet.fragments.ui.tools.ToolsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
